<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/scanAnotherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="@color/red"
        android:text="@string/scan_another"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:gravity="center_horizontal"
        android:id="@+id/moreInfo"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="@color/red"
        android:text="@string/more_info"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/image"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="290dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="346dp"
        android:background="@drawable/box"
        android:gravity="center_horizontal"
        android:text="@string/item_desc"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap,TextSizeCheck" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="290dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="265dp"
        android:gravity="center"
        android:text="@string/calories"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="290dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="302dp"
        android:gravity="center"
        android:text="@string/fats"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="290dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="338dp"
        android:gravity="center"
        android:text="@string/carbs"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="290dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="374dp"
        android:gravity="center"
        android:text="@string/sodium"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

